--- a/last_color_purple.ui
+++ b/last_color_purple.ui
@@ -533,114 +533,11 @@ border-width: 1px;border-radius:5px;</string>
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_16">
                     <item>
-                     <layout class="QHBoxLayout" name="horizontalLayout_6">
-                      <item>
-                       <widget class="QLabel" name="label_15">
-                        <property name="minimumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="maximumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="font">
-                         <font>
-                          <family>黑体</family>
-                         </font>
-                        </property>
-                        <property name="styleSheet">
-                         <string notr="true">color: rgb(0,0,0);</string>
-                        </property>
-                        <property name="text">
-                         <string/>
-                        </property>
-                        <property name="scaledContents">
-                         <bool>true</bool>
-                        </property>
-                        <property name="alignment">
-                         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-                        </property>
-                       </widget>
-                      </item>
-                      <item>
-                       <widget class="QLabel" name="label_16">
-                        <property name="minimumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="maximumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="font">
-                         <font>
-                          <family>黑体</family>
-                         </font>
-                        </property>
-                        <property name="styleSheet">
-                         <string notr="true">color: rgb(0,0,0);</string>
-                        </property>
-                        <property name="text">
-                         <string> </string>
-                        </property>
-                        <property name="scaledContents">
-                         <bool>true</bool>
-                        </property>
-                       </widget>
-                      </item>
-                      <item>
-                       <widget class="QLabel" name="label_17">
-                        <property name="minimumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="maximumSize">
-                         <size>
-                          <width>150</width>
-                          <height>143</height>
-                         </size>
-                        </property>
-                        <property name="font">
-                         <font>
-                          <family>黑体</family>
-                         </font>
-                        </property>
-                        <property name="styleSheet">
-                         <string notr="true">color: rgb(0,0,0);</string>
-                        </property>
-                        <property name="text">
-                         <string/>
-                        </property>
-                        <property name="scaledContents">
-                         <bool>true</bool>
-                        </property>
-                       </widget>
-                      </item>
-                      <item>
-                       <spacer name="horizontalSpacer_6">
-                        <property name="orientation">
-                         <enum>Qt::Horizontal</enum>
-                        </property>
-                        <property name="sizeHint" stdset="0">
-                         <size>
-                          <width>40</width>
-                          <height>20</height>
-                         </size>
-                        </property>
-                       </spacer>
-                      </item>
-                     </layout>
+                     <widget class="QListWidget" name="listWidget">
+                      <property name="flow">
+                       <enum>QListView::LeftToRight</enum>
+                      </property>
+                     </widget>
                     </item>
                    </layout>
                   </widget>
